fix : migliorata visibilita' device corti

--- a/css/style.css
+++ b/css/style.css
@@ -660,6 +660,17 @@ tr:last-child td {
 
 
 }
+@media (max-height: 1200px){
+    .menu-item{
+        padding: 10px 20px;
+        margin: 10px 0;
+    }
+
+    .division-ball{
+        width: 45px;
+        height: 45px;
+    }
+}
 @media (max-width: 992px) {
     .competizioni-table {
         width: 95%;
